--- a/docs/styles/custom.css
+++ b/docs/styles/custom.css
@@ -9,3 +9,11 @@
 .footer {
   display: none;
 }
+
+.sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  overflow-y: auto;
+  max-height: 100vh;
+}
